fix: refactored the landing page

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       </div>
     </main>
     <main class="installation">
-      <div class="intallation-text">
+      <div class="installation-text">
         <h2>Installation</h2>
         <p>Copy and paste the code in the head tag of your html document. Then you can use the components just by adding the classes to your html elements</p>
       </div>
-      <div class="installtion-img">
+      <div class="installation-code">
         <iframe
           src="https://carbon.now.sh/embed/xgD5mPnx5rGxswmLhBAT"
-          style="overflow: hidden; padding: 0;"
+          style="overflow: hidden; transform: scale(1);"
           sandbox="allow-scripts allow-same-origin">
         </iframe>
       </div>
