fix: fixed UI and added some links

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       </div>
       <div class="header__right">
         <button>
-          <a href=""><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/md-amir-gauhar/"><i class="fab fa-linkedin"></i></a>
         </button>
         <button>
-          <a href=""><i class="fab fa-github"></i></i></a>
+          <a href="https://github.com/md-amir-gauhar"><i class="fab fa-github"></i></i></a>
         </button>
         <button>
-          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/gauhar_amir"><i class="fab fa-twitter"></i></a>
         </button>
         <button>
           <a href="#"><i class="fas fa-moon"></i></i></a>
@@ -40,8 +40,12 @@
       <br>
       <p class="banner--text">TUI⚡ is a simple, modular and accessible component library that gives you the building blocks you need to build your applications.</p>
       <div class="banner--buttons">
-        <button class="secondary-btn"><i class="fab fa-github"></i>Github</button>
-        <button class="primary-btn">Get started &#8594;</button>
+        <button class="secondary-btn">
+          <a href="https://github.com/md-amir-gauhar/thunder-ui"><i class="fab fa-github"></i>Github</a>
+        </button>
+        <button class="primary-btn">
+          <a href="">Get started &#8594;</a>
+        </button>
       </div>
     </main>
     <main class="installation">
@@ -49,13 +53,7 @@
         <h2>Installation</h2>
         <p>Copy and paste the code in the head tag of your html document. Then you can use the components just by adding the classes to your html elements</p>
       </div>
-      <div class="installation-code">
-        <iframe
-          src="https://carbon.now.sh/embed/xgD5mPnx5rGxswmLhBAT"
-          style="overflow: hidden; transform: scale(1);"
-          sandbox="allow-scripts allow-same-origin">
-        </iframe>
-      </div>
+      <embed src="https://carbon.now.sh/embed/BLlwNbDouxHZx2JQQYlj" type="text/html">
     </main>
     <footer class="footer">
       <p>Made with &#8249;/&#8250;</p>
