update: added link to the components

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://github.com/md-amir-gauhar/thunder-ui"><i class="fab fa-github"></i>Github</a>
         </button>
         <button class="primary-btn">
-          <a href="">Get started &#8594;</a>
+          <a href="./components/avatars/index.html">Get started &#8594;</a>
         </button>
       </div>
     </main>
