--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
         <h2>Installation</h2>
         <p>Copy and paste the code in the head tag of your html document. Then you can use the components just by adding the classes to your html elements</p>
       </div>
-      <embed src="https://carbon.now.sh/embed/BLlwNbDouxHZx2JQQYlj" type="text/html">
+      <div class="code-box">
+        <div class="code">
+          <div class="line">
+            <span class="sym"><</span>
+            <span class="element">link </span>
+            <span class="attribute">rel</span>
+            <span class="sym">=</span>
+            <span class="attr-content">"stylesheet" </span>
+            <span class="attribute">href</span>
+            <span class="sym">=</span>
+            <span class="attr-content">"https://thunder-ui.netlify.app/styles.css"</span>
+            <span class="sym">></span>
+          </div>
+        </div>
+    </div>
     </main>
     <footer class="footer">
       <p>Made with &#8249;/&#8250;</p>
