added light/dark mode functionality and fixed some ui issues

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -17,7 +18,7 @@
   <body>
     <header class="header">
       <div class="header__left">
-        <a href="./index.html"><h1>Thunder⚡ UI</h1></a>
+        <h1>Thunder⚡ UI</h1>
       </div>
       <div class="header__right">
         <button>
@@ -29,7 +30,7 @@
         <button>
           <a href="https://twitter.com/gauhar_amir"><i class="fab fa-twitter"></i></a>
         </button>
-        <button>
+        <button class="dark-btn">
           <a href="#"><i class="fas fa-moon"></i></i></a>
         </button>
       </div>
@@ -73,5 +74,6 @@
       <p>Made with &#8249;/&#8250;</p>
       <p>&copy; 2022 | Md Amir Gauhar</p>
     </footer>
+    <script src="./scripts/dark.js"></script>
   </body>
 </html>
