made miscellaneous changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span class="attr-content">"stylesheet" </span>
             <span class="attribute">href</span>
             <span class="sym">=</span>
-            <span class="attr-content">"https://thunder-ui.netlify.app/styles.css"</span>
+            <span class="attr-content">"https://thunder-ui.netlify.app/thunder.css"</span>
             <span class="sym">></span>
           </div>
         </div>
